[*] Comments controller (tsop)
